<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#e9d205"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0.78"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/logo"
            android:src="@drawable/nit_logo"
            android:layout_weight="0.6"
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
        <TextView
            android:layout_weight=".5"
            android:layout_width="match_parent"
            android:text="@string/di"
            android:textSize="42sp"
            android:layout_gravity="center"
            android:gravity="center|bottom"
            android:textStyle="bold"
            android:textColor="#ff283aff"
            android:layout_height="0dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="#ff2796ff"
            android:textSize="20sp"
            android:layout_weight=".5"
            android:gravity="center|top"
            android:textStyle="italic|bold"
            android:layout_gravity="center"
            android:text="@string/specialist"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0.22"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:text="@string/welcome"
            android:textSize="50sp"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:textColor="#ffff4c2f"
            android:layout_weight="0.7"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
        <TextView
            android:text="@string/website"
            android:textColor="#ff2796ff"
            android:layout_weight="0.3"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </LinearLayout>

</LinearLayout>