<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9d205"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.3"
        android:layout_gravity="center">
        <View
            android:layout_weight="0.2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"/>

        <ImageView
            android:layout_weight="0.7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/nit_logo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="0.3">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/di"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:textSize="42sp"
            android:layout_gravity="center"
            android:gravity="center|bottom"
            android:textStyle="bold"
            android:textColor="#ff283aff"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="#ff3227"
            android:textSize="18sp"
            android:layout_weight="0.3"
            android:gravity="center|top"
            android:textStyle="italic|bold"
            android:layout_gravity="center"
            android:text="@string/specialist"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:layout_gravity="center">
        <View
            android:layout_weight="0.25"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.16"
            android:text="@string/login"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/button1"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:background="@drawable/login_button"
            android:gravity="center"/>
        <View
            android:layout_weight="0.05"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <Button
            android:layout_width="match_parent"
            android:background="@drawable/register_button"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.16"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:text="@string/register"
            android:id="@+id/button2" />
        <View
            android:layout_weight="0.18"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    </LinearLayout>

</LinearLayout>
