<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_page_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="#ffffff"
            android:textSize="26dp"
            android:background="#ff1a1a"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:padding="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="0dp"
            android:layout_weight="0.8">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/camera"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:layout_height="0dp">
            <Button
                android:id="@+id/choose"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAllCaps="false"
                android:background="@drawable/choose_background"
                android:text="@string/choose_photo"
                android:textColor="#ffffff"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55"
            android:layout_gravity="center">
        <TableLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <EditText
                    android:id="@+id/dob"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/dobirth"
                    android:textColor="#00134d"
                    android:layout_gravity="bottom"
                    android:textColorHint="#00134d"
                    android:textStyle="bold"
                    android:inputType="date"
                    android:textSize="20dp"/>

                <ImageView
                    android:id="@+id/scroll"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/expans"
                    android:layout_alignTop="@+id/dob"
                    android:layout_gravity="bottom"
                    android:padding="1dp"
                    android:layout_alignParentEnd="false"
                    android:layout_toEndOf="@id/dob"
                    android:layout_alignParentRight="false"
                    android:layout_toRightOf="@id/dob" />

                <EditText
                    android:id="@+id/gen_text"
                    android:background="@null"
                    android:layout_gravity="bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:textColor="#ff1a1a"
                    android:textColorHint="#ff1a1a"
                    android:textStyle="bold"
                    android:layout_toLeftOf="@+id/gender"
                    android:textSize="20dp"/>

                <ImageView
                    android:id="@+id/gender"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/red_expan"
                    android:layout_alignTop="@+id/dob"
                    android:layout_gravity="bottom"
                    android:padding="1dp"
                    android:layout_marginTop="3dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_gravity="center">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/username"
                        android:textSize="15dp"
                        android:layout_marginBottom="8dp"
                        android:imeOptions="actionNext"
                        android:hint="@string/username"
                        android:textColorHint="#8a000000"
                        android:ems="10"
                        android:textColor="#000000"
                        android:maxLines="1"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#8a000000"
                        android:textColor="#000000"
                        android:textSize="15dp"
                        android:layout_marginBottom="8dp"
                        android:imeOptions="actionNext"
                        android:hint="@string/emails"
                        android:maxLines="1"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:id="@+id/email"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:textSize="15dp"
                        android:layout_marginBottom="8dp"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColorHint="#8a000000"
                        android:textColor="#000000"
                        android:id="@+id/password"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/retype_password"
                        android:imeOptions="actionDone"
                        android:textColorHint="#8a000000"
                        android:textSize="15dp"
                        android:layout_marginBottom="8dp"
                        android:textColor="#000000"
                        android:ems="10"
                        android:hint="@string/retype_pass"
                        android:maxLines="1"
                        android:inputType="textPassword"/>
                </RelativeLayout>

            </LinearLayout>
            <Button
                android:id="@+id/create"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/background_design"
                android:textSize="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/create_btn"
                android:textColor="#ffffff"/>
    </TableLayout>
    </RelativeLayout>
</LinearLayout>