<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9d205"
    android:theme="@style/AppTheme1" >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:orientation="horizontal">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_profile"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:background="#ff1a1a"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:padding="10dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="0dp"
            android:layout_weight="0.8">
            <ImageView
                android:id="@+id/profile1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_weight="0.1">
        <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#00134d"
            android:layout_gravity="bottom"
            android:textStyle="bold"
            android:text="@string/dob"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/scroll"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="1dp"
            android:textColor="#ff1a1a"
            android:textSize="20dp"
            android:layout_alignParentEnd="false"
            android:layout_toEndOf="@id/dob"
            android:layout_alignParentRight="false"
            android:layout_toRightOf="@id/dob" />

        <TextView
            android:id="@+id/gen_text"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender:"
            android:textColor="#00134d"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/gender"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/dob"
            android:layout_gravity="bottom"
            android:padding="1dp"
            android:textColor="#ff1a1a"
            android:textSize="20dp"
            android:layout_marginTop="3dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout></LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="0dp"
        android:layout_weight="0.50">
        <TableLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_gravity="center">
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >
                    <TextView
                        android:id="@+id/username"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:text="@string/user_name"
                        android:textColor="#ffff2638"/>
                    <TextView
                        android:id="@+id/name"
                        android:textSize="20dp"
                        android:textColor="#00134d"
                        android:textStyle="bold"
                        android:text="@string/username" />
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip">
                    <TextView
                        android:id="@+id/email"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:text="@string/email"
                        android:textColor="#ffff2638" />
                    <TextView
                        android:id="@+id/user_email"
                        android:textSize="20dp"
                        android:textColor="#00134d"
                        android:textStyle="bold"
                        android:text="123456" />

                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip">
                    <TextView
                        android:id="@+id/password"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:text="@string/passwords"
                        android:textColor="#ffff2638"/>
                    <TextView
                        android:id="@+id/password_user"
                        android:textSize="20dp"
                        android:textColor="#00134d"
                        android:textStyle="bold"
                        android:text="@string/username"/>
                </TableRow>
            </TableLayout>

        </TableLayout>

        <Button
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:textSize="20dp"
            android:onClick="close"
            android:layout_marginTop="150dp"
            android:text="visit"
            />
    </RelativeLayout>


</LinearLayout>