<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/register_page_bg"
    tools:context="com.example.vikram.newpageupdated.activity.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.35">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/logo"
            android:src="@drawable/nit_logo1"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:layout_weight="0.8" />
        <TextView
            android:text="It is an National Institute located at Srinagar Garhwal "
            android:textColor="#ff283aff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.4">
        <View
            android:layout_width="match_parent"
            android:layout_weight="0.1"
            android:layout_height="0dp"/>
        <TextView
            android:id="@+id/login"
            android:layout_weight="0.2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text=  "Please Enter valid userid and password"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:textStyle="normal"
            android:textColor="#ff2796ff"
            android:layout_below="@+id/diary"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />
        <View
            android:layout_weight="0.05"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.6"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/username"
                android:textStyle="bold"
                android:maxLines="1"
                android:textColorHint="#8a000000"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="20dp"
                android:ems="10"
                android:textColor="#000000"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:maxLines="1"
                android:textColorHint="#8a000000"
                android:imeOptions="actionDone"
                android:textStyle="bold"
                android:textSize="20dp"
                android:ems="10"
                android:textColor="#000000"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.2">
        <Button
            android:id="@+id/log_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/password"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="@drawable/background_design"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/log_button"
                android:text="@string/for_pass"
                android:textSize="20dp"
                android:textColor="#00ffff" />
            <ImageView
                android:id="@+id/help_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/question"
                android:layout_below="@+id/log_button"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/forgot" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
